Changes created to change the plugin to work with a number of files in a given directory.